cmake_minimum_required(VERSION 3.2)
PROJECT (leetcode)
SET (XCODE_BUILD "build.release")
SET (GIT_DIR ".git")

MACRO(SUBDIRLIST result curdir)
    FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
    SET(dirlist "")
    FOREACH(child ${children})
        IF(IS_DIRECTORY ${curdir}/${child})
            LIST(APPEND dirlist ${child})
        ENDIF()
    ENDFOREACH()
    SET(${result} ${dirlist})
ENDMACRO()

SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})

FOREACH(subdir ${SUBDIRS})
    STRING(COMPARE EQUAL "${subdir}" ${XCODE_BUILD} _cmp)
    IF(_cmp)
        CONTINUE()
    ENDIF()
    STRING(COMPARE EQUAL "${subdir}" ${GIT_DIR} _cmp)
	IF(_cmp)
        CONTINUE()
    ENDIF()
    ADD_SUBDIRECTORY(${subdir})
ENDFOREACH()
